# firmware

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  AGENTS.md  Makefile  README.md  ROVfunctions.py  camera.nix  camera_stream.py  config.ini  configuration.nix  flake.nix  mainscript.py  mediamtx.yml  pyproject.toml  rauc-keyring.pem  requirements.txt  sync-python-deps.sh  test_stream.html  video.py
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/build-and-upload/: action.yml
.github/workflows/: build.yaml  build.yml  ci.yaml  ci.yml  re-upload.yaml  sync-python-deps.yaml
camera/: default.nix
camera_stream/: mediamtx.yml
deprecated/: picosend_uart.py
device_controls/: bmi270.py  config.ini  config.py  imu.py  main.py  regulator.py  regulator_test.py  thrusters.py  wetsensor.py
dshot/: __init__.py  default.nix  dshotmodule.c  motor-dshot-smi.c  rpi_dma_utils.c  rpi_dma_utils.h  setup.py
dshot/dshot/: __init__.py
modules/: mediamtx.nix
modules/dshot/: default.nix
modules/mediamtx/: default.nix
nix/: camera.nix  firmware.nix  image.nix  impermanence.nix  mcu.nix  networking.nix  rauc.nix  sensors.nix  system.nix
old/: RasPiFunctions.py  mainscript.py  regulator_tuning.py  runThruster5.py  sendThrustValue.py  testThruster.py  testThruster2.py  thrusters.py
old/thruster_control/: control_thrusters.py  dshot_test.py  regulator.py  run_thrusters.py
old/thruster_control/c files/: test
pico/: .gitignore  CMakeLists.txt  README.md  dshot.c  dshot.h  dshot.pio  main.c  main_for_pico.py
pico/dshot/: main.c
pico/pwm/: main.c
pico/tests/: main.c
pico_testing/: picosend.py  picosend_test.py  readme.md
scripts/: imu.py  mock_websocket_server.py  packages.py  pressure.py  sync-python-deps.sh  test_packages_available.py  test_pressure_sensor.py  test_thrusters.py  thrusters.py  websocket_server.py
sensors/: wetsensor.py
src/: PCA9685.py  PCA9685_fast.py  base_model.py  bootsel.py  camera_select.py  camera_stream.py  config.ini  config.json  config.py  constants.py  imu.py  log.py  main.py  ms5837.py  pico.py  picosend2.py  picosend_hyper.py  picosend_test.py  picosend_uart.py  pressure.py  regulator.py  regulator_depth_hold.py  regulator_tuning.py  relay_auto_tuning.py  rov_config.py  rov_state.py  rov_types.py  serial.py  thrusters.py  thrusters_old.py  toast.py  utils.py  websocket_handler.py  websocket_senders.py  websocket_server.py  websocket_test.py  wetsensor.py
src/custom_actions/: example_action.py
src/device_controls_old/: config.ini  config.py  thrusters.py
src/microcontroller_firmware/: dshot.uf2  pwm.uf2
src/models/: actions.py  base.py  cancel.py  config.py  esc.py  log.py  regulator.py  rov_status.py  rov_telemetry.py  sensors.py  system.py  thruster.py  toast.py
src/old/: config.ini  config.py  imu.py  regulator_test.py  relay_auto_tuning.py
src/pico/: dshot300.uf2  dshot_firmware.uf2  pwm_firmware.uf2
src/rov_firmware/: __init__.py  constants.py  firmware_update.py  log.py  main.py  regulator.py  rov_state.py  serial.py  thrusters.py  toast.py
src/rov_firmware/custom_actions/: cpu_temperature.py  example_action.py  water_sensor.py
src/rov_firmware/models/: actions.py  config.py  log.py  regulator.py  rov_status.py  rov_telemetry.py  sensors.py  system.py  thruster.py  toast.py
src/rov_firmware/sensors/: esc.py  imu.py  mcu.py  pressure.py
src/rov_firmware/websocket/: handler.py  message.py  queue.py  server.py  state.py  types.py
src/rov_firmware/websocket/receive/: actions.py  config.py  mcu.py  microcontroller.py  regulator.py  state.py
src/rov_firmware/websocket/send/: config.py  status.py  telemetry.py
src/sensors/: esc.py  imu.py  pressure.py
src/system/: camera_select.py
src/tests/: available_packages.py  connection.py  depth_hold_thrust_allocation_software_test.py  imu.py  packages.py  pico.py  pressure.py  thrusters.py  uart.py  uart_test.py  websocket_server.py
src/tests_old/results/: IMUTEST_alpha0.txt  IMUTEST_alpha1.txt  IMUTEST_alpha92.txt  IMUTEST_alpha98.txt  MPU6050_NOGYRO.txt  MPU6050_alpha96.txt
src/tests_old/results/EMA_results/: lambda0p5.csv  lambda20.csv
src/tools/: __init__.py  mock_websocket_server.py  test_imu.py  test_packages_available.py  test_pressure_sensor.py  test_thrusters.py
src/websocket/: cancel_messages.py  handler.py  message.py  senders.py  server.py  state.py  types.py
src/websocket/receive/: actions.py  config.py  microcontroller.py  regulator.py  state.py
src/websocket/send/: config.py  status.py  telemetry.py
test_results/: IMUREADING.txt  plot.py
tests/: EMA_test.py  conftest.py  imu.py  imu_test.py  imu_test_2.py  imu_test_realtime.py  mpu6050_test.py  packages.py  pressure.py  regulator_test.py  test_config.py  test_import_config.py  test_regulator.py  test_set_config.py  test_thrusters.py  thrusters.py  websocket_server.py
tests/results/: IMUTEST_alpha95.txt  IMUTEST_alpha95real.txt  MPU6050_WITHGYRO.txt  MPU6050_alpha96_90deg.txt  plot_imu_test.py
tests/results/EMA_results/: EMA_plot.py  alpha1.csv  lambda0.csv  lambda0p2.csv  lambda0p8.csv  lambda111.csv
thruster_control/: communication.py  control_thrusters.py  dshot_test.py  dshot_thrust_control.py  regulator.py  run_8thrusters.py  run_thrusters.py  test_dshot.py  test_dshot_rev.py  test_thrusters.py  thrusters.py
(+1 files in other folders)
