[project]
name = "manafish-firmware"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "websockets==15.0.1",
  "numpy==2.3.4",
  "smbus2==0.5.0",
  "bmi270 @ git+https://github.com/CoRoLab-Berlin/bmi270_python.git@8309e687d6b346455833c5d0c2734eeb56e98789",
  "ms5837 @ git+https://github.com/bluerobotics/ms5837-python.git@02996d71d2f08339b3d317b3f4da0a83781c706e",
  "pyserial-asyncio>=0.6",
  "pydantic==2.12.3",
  "scipy==1.16.3",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
fix = true
show-fixes = true
unsafe-fixes = true
format.docstring-code-format = true
lint.select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "T10",
  "T20",
  "EM",
  "S",
  "DTZ",
  "SIM",
  "C4",
  "PTH",
  "PGH",
  "ARG",
  "RUF",
  "PL",
  "D",
  "ANN",
]
lint.ignore = ["E501", "D203", "D213"]
lint.pydocstyle.convention = "google"
lint.mccabe.max-complexity = 10
lint.isort.force-sort-within-sections = true
lint.isort.combine-as-imports = true
lint.isort.order-by-type = true
lint.isort.lines-after-imports = 2
lint.flake8-annotations.mypy-init-return = true
lint.flake8-annotations.suppress-dummy-args = false
lint.flake8-annotations.ignore-fully-untyped = false

[tool.basedpyright]
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnusedParameter = false
