[project]
name = "manafish-firmware"
version = "1.0.0"
description = "Firmware for the Manafish ROV"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13,<3.14"
dependencies = [
  "numpy==2.3.4",
  "websockets==15.0.1",
  "pydantic==2.11.7",
  "numpydantic==1.7.0",
  "smbus2==0.5.0",
  "scipy==1.16.3",
  "pyserial-asyncio-fast==0.16",
  "bmi270==0.4.3",
  "ms5837 @ git+https://github.com/bluerobotics/ms5837-python.git@02996d71d2f08339b3d317b3f4da0a83781c706e",
]

[project.scripts]
start = "rov_firmware:start"
tools = "tools:cli"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
fix = true
show-fixes = true
unsafe-fixes = true
format.docstring-code-format = true
lint.select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "T10",
  "T20",
  "EM",
  "S",
  "DTZ",
  "SIM",
  "C4",
  "PTH",
  "PGH",
  "ARG",
  "RUF",
  "PL",
  "D",
  "ANN",
]
lint.ignore = ["E501", "D203", "D213"]
lint.pydocstyle.convention = "google"
lint.mccabe.max-complexity = 10
lint.isort.force-sort-within-sections = true
lint.isort.combine-as-imports = true
lint.isort.order-by-type = true
lint.isort.lines-after-imports = 2
lint.flake8-annotations.mypy-init-return = true
lint.flake8-annotations.suppress-dummy-args = false
lint.flake8-annotations.ignore-fully-untyped = false

[tool.ty]
rules.division-by-zero = "error"
rules.unresolved-reference = "error"
rules.unresolved-import = "error"
rules.possibly-unresolved-reference = "warn"
